用友网站大致定稿

--- a/yongyou/listHtml/yongyouCloud.html
+++ b/yongyou/listHtml/yongyouCloud.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 	<header class="yongyou-header cloud-header" id="headerjs"></header>
-	<div class="cloud-one sections">
+	<div class="cloud-one sections block-wrapper">
 		<div class="sec-wrapper">
 			<div class="secLeft"><h1><span>用友云</span></h1></div>
 			<div class="secRight"><h1><span>数字企业智能服务</span></h1></div>
@@ -64,7 +64,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="cloud-three sections">
+	<div class="cloud-three sections block-wrapper">
 		<div class="cloudThree-left">
 			<div class="sec-wrapper">
 				<div class="secRight"><h1>行业云</h1></div>
@@ -129,7 +129,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="cloud-five sections">
+	<div class="cloud-five sections block-wrapper">
 			<h1 class="container"><span>典型案例</span><span>|</span><span>典型案例</span></h1>
 				<div class="cloudFive-div">
 				<div id="owl-examples4" class="owl owl4">
@@ -214,7 +214,7 @@
         		</div>
 				</div>
 	</div>
-	<div class="cloud-six cloud">
+	<div class="cloud-six cloud block-wrapper">
 		<h1 class="container"><span>云市场</span><span>|</span><span>云市场</span></h1>
 		<div class="cloudSix-div">
 			<div class="cloudSix-left">
