--- a/yongyou/listHtml/yongyouFinance.html
+++ b/yongyou/listHtml/yongyouFinance.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 	<header class="yongyou-header cloud-header" id="headerjs"></header>
-	<div class="finance-one sections">
+	<div class="finance-one sections block-wrapper">
 		<div class="sec-wrapper">
 			<div class="secLeft"><h1><span>用友云</span></h1></div>
 			<div class="secRight"><h1><span>企业金融服务</span></h1></div>
@@ -42,7 +42,7 @@
             </div>
         </div>
 	</div>
-	<div class="finance-two finance">
+	<div class="finance-two finance block-wrapper">
 		<img class="financeBg" src="../img/banner/finBan-one.jpg"/>
 		<div class="finTwo-left">
 			<div class="finLeft-div">
@@ -58,7 +58,7 @@
 		</div>
 		<div class="finTwo-right"><h1><span>支付结算</span></h1></div>
 	</div>
-	<div class="finance-three finance">
+	<div class="finance-three finance block-wrapper">
 		<img class="financeBg" src="../img/banner/finBan-two.jpg"/>
 		<div class="finTwo-left">
 			<div class="finLeft-div">
@@ -80,7 +80,7 @@
 		</div>
 		<div class="finTwo-right"><h1><span>企业融资</span></h1></div>
 	</div>
-	<div class="finance-four finance">
+	<div class="finance-four finance block-wrapper">
 		<img class="financeBg" src="../img/banner/finBan-three.jpg"/>
 		<div class="finTwo-left">
 			<div class="finLeft-div">
@@ -104,7 +104,7 @@
 		</div>
 		<div class="finTwo-right"><h1><span>数据服务</span></h1></div>
 	</div>
-	<div class="finance-five finance">
+	<div class="finance-five finance block-wrapper">
 		<img class="financeBg" src="../img/banner/finBan-one.jpg"/>
 		<div class="finTwo-left">
 			<div class="finLeft-div">
