--- a/yongyou/listHtml/yongyouMarket.html
+++ b/yongyou/listHtml/yongyouMarket.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 	<header class="yongyou-header cloud-header" id="headerjs"></header>
-	<div class="market-one sections">
+	<div class="market-one sections block-wrapper">
 		<div id="owl-exampleM" class="owl owl1">
             <div class="item">
                 <a href="javascript:;"><img src="../img/one.jpg"/></a>
@@ -38,7 +38,7 @@
         </div>
 		
 	</div>
-	<div class="market-two market">
+	<div class="market-two market block-wrapper">
 		<div class="container">
 			<div class="mkTwo-top">
 				<ul class="list-inline row" style="margin: 0;">
